fixed small layout issues from QA. https://wiki.corp.adobe.com/pages/editpage.action?pageId=3660864250

--- a/express/code/blocks/print-product-detail/print-product-detail.css
+++ b/express/code/blocks/print-product-detail/print-product-detail.css
@@ -295,19 +295,32 @@
   pointer-events: none;
   background: linear-gradient(to top, white 20%, rgba(255, 255, 255, 0) 100%);
 }
-
 .pdpx-checkout-button-text {
   font-size: 18px;
   font-weight: 700;
 }
-
 .pdpx-checkout-button-subhead {
   display: none;
   flex-direction: row;
-  align-items: baseline;
+  align-items: end;
+  flex-wrap: wrap;
   justify-content: center;
-  gap: 2px;
+  gap: var(--figma-spacing-75);
 }
+.pdpx-checkout-button-subhead-image {
+  margin-bottom: 1px;
+
+}
+main .pdpx-checkout-button-subhead a.pdpx-checkout-button-subhead-link {
+  white-space: nowrap;
+  color: #000;
+  font-weight: 400;
+  text-decoration: underline;
+}
+.pdpx-checkout-button-subhead-text {
+  text-align: right;
+}
+
 .pdpx-checkout-button-disabled a.pdpx-checkout-button {
   background-color: #505050;
   border-radius: 10px;
@@ -319,9 +332,27 @@
     font-weight: 400;
   }
 }
+.pdpx-assurance-lockup-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: var(--figma-spacing-300);
+  padding: var(--figma-spacing-100) 0;
+  background-color: #f8f8f8;
+  margin-bottom: var(--figma-spacing-400);
+  border-radius: 8px;
+  .pdpx-assurance-lockup-item {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: var(--figma-spacing-100);
+    width: 50%;
+    justify-content: center;
+  }
+}
 /* END CHECKOUT BUTTON */
 
-/* Pill Selector */
+/* PILL SELECTOR */
 .pdpx-pill-selector-container {
   margin-bottom: var(--figma-spacing-400);
   .pdpx-pill-selector-label-container {
@@ -334,13 +365,11 @@
     }
   }
 }
-
 .pdpx-pill-selector-label {
   display: block;
   font-weight: 700;
   margin-bottom: var(--figma-spacing-100);
 }
-
 .pdpx-pill-selector-options-container {
   display: flex;
   flex-direction: row;
@@ -579,7 +608,7 @@ main .section .pdpx-drawer-description {
   border-color: #000;
   transition: var(--standard-transition-hover-in-border-color);
 }
-/* Tooltip content */
+/* TOOLTIP CONTENT */
 .pdpx-mini-pill-image-container::after {
   content: attr(data-title);
   position: absolute;
@@ -606,7 +635,7 @@ main .section .pdpx-drawer-description {
   margin-bottom: var(--figma-spacing-100);
 }
 
-/* Tooltip arrow */
+/* TOOLTIP ARROW */
 .pdpx-mini-pill-image-container::before {
   content: '';
   position: absolute;
@@ -667,6 +696,9 @@ main .section .pdpx-drawer-description {
 .pdpx-standard-selector {
   padding: var(--figma-spacing-100);
   cursor: pointer;
+}
+.pdpx-product-details-section {
+  margin-bottom: var(--figma-spacing-400);
 }
 .pdpx-product-details-section-title-container {
   padding-bottom: var(--figma-spacing-300);
@@ -846,6 +878,9 @@ main .section .pdpx-drawer-description {
     .pdpx-drawer-title-row
     .pdpx-drawer-title {
     font-size: var(--body-font-size-xl);
+  }
+  .pdpx-assurance-lockup-container {
+    flex-direction: row;
   }
 }
 /*WIDE-SCREEN*/
